refactoring as per PR comments
Signed-off-by: filev94 <todor.filev@limechain.tech>